Add PullRequest functionality
