# backend/src/pullrequest/controller/pullrequest.api.ts
@@ -1,0 +1,12 @@
+import {
+  AuthoredPullRequest,
+  ReviewingPullRequest,
+} from '../model/pullrequest.model';
+
+export class AuthoredByUserResponse {
+  public readonly pullRequests: AuthoredPullRequest[];
+}
+
+export class ReviewRequestedFromUserResponse {
+  public readonly pullRequests: ReviewingPullRequest[];
+}
